<?xml version="1.0"?>
<package>
	<name>cwru_playfile_reader</name>
	<version>0.0.0</version>
	<description>The playfile_reader package</description>
  
	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<maintainer email="wsn@case.edu">Wyatt Newman</maintainer>
	<maintainer email="tes77@case.edu">Tom Shkurti</maintainer>

	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>cwru_davinci_kinematics</build_depend>
	<build_depend>cwru_davinci_traj_streamer</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>trajectory_msgs</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>roslib</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>cwru_davinci_kinematics</run_depend>
	<run_depend>cwru_davinci_traj_streamer</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>trajectory_msgs</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>roslib</run_depend>
	
	
	<export></export>
</package>
